# worldcup-ai-predictor

./: README.md
backend/: pyproject.toml
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
backend/src/marco/: main.py  test_registry.py
backend/src/marco/config/: datasets.yaml  settings.py
backend/src/marco/data/: cleaner.py  dataset_builder.py  downloader.py  elo_engine.py  feature_builder.py  head_to_head.py  rolling_stats.py
backend/src/marco/data/providers/: base.py  elo.py  fifa.py  historical.py
backend/src/marco/ml/: train.py
backend/src/marco/ml/inference/: loader.py
backend/src/marco/ml/models/: base.py  catboost_model.py  lightgbm_model.py  logistic_model.py  random_forest_model.py  xgboost_model.py
backend/src/marco/ml/preprocessing/: encoder.py  preprocessor.py
backend/src/marco/ml/training/: evaluator.py  loader.py  registry.py  splitter.py  trainer.py
data/processed/: training_dataset.parquet
data/raw/matches/: historical_matches.csv
models/: best_model.joblib  marco_pipeline.joblib  marco_xgb.joblib
