[project]
name = "marco"
version = "0.1.0"
description = "Marco - AI Football Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "pandas>=2.3",
    "numpy>=2.3",
    "scikit-learn>=1.7",
    "requests>=2.32",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "pydantic>=2.11",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.16",
    "loguru>=0.7",
    "rich>=14.0",
    "kagglehub>=1.0.2",
    "pyarrow>=24.0.0",
    "xgboost>=3.3.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
    "mlflow>=3.14.0",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marco"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
